[FEAT]: expose associated jobs [FIX]: update swagger route
