# src/config/router.js
@@ -1,9 +1,11 @@
 import authRouter from '@/routes/auth';
 import indexRouter from '@/routes/index';
 import tweetRouter from '@/routes/tweet';
+import associatedJobRouter from '@/routes/associatedJob';
 
 export default function (app) {
   app.use('/', indexRouter);
   app.use('/auth', authRouter);
   app.use('/tweets', tweetRouter);
+  app.use('/associatedJobs', associatedJobRouter)
 }
